--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,16 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
+anyio==4.6.0
+    # via httpx
 asgiref==3.8.1
     # via
     #   django
     #   django-cors-headers
+certifi==2024.8.30
+    # via
+    #   httpcore
+    #   httpx
 django==5.0.6
     # via
     #   -r requirements.in
@@ -17,6 +23,16 @@ django-cors-headers==4.4.0
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
+h11==0.14.0
+    # via httpcore
+httpcore==1.0.5
+    # via httpx
+httpx==0.27.2
+    # via python-telegram-bot
+idna==3.10
+    # via
+    #   anyio
+    #   httpx
 iniconfig==2.0.0
     # via pytest
 packaging==24.1
@@ -35,5 +51,11 @@ python-dotenv==1.0.1
     # via -r requirements.in
 python-json-logger==2.0.7
     # via -r requirements.in
+python-telegram-bot==21.6
+    # via -r requirements.in
+sniffio==1.3.1
+    # via
+    #   anyio
+    #   httpx
 sqlparse==0.5.0
     # via django
