--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   database:
     image: postgres:16-alpine
@@ -14,6 +12,11 @@ services:
       POSTGRES_PASSWORD: $DB_PASSWORD
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $DB_NAME"]
+      interval: 5s
+      timeout: 2s
+      retries: 5
 
   api:
     env_file:
@@ -22,7 +25,8 @@ services:
       - DB_HOST=database
       - DB_PORT=5432
     depends_on:
-      - database
+      database:
+        condition: service_healthy
     build:
       context: .
       dockerfile: Dockerfile
